lib/src/compiler/tests/testdata/errors/112.out
error[E011]: invalid range
 --> line:3:20
  |
3 |     $a = "foo" xor(2-1)
  |                    ^ lower bound (2) is greater than upper bound (1)
  |